# pulse-narrator

./: .gitignore  Cargo.toml  EXECUTIVE-SUMMARY.md  ROADMAP.md  rust-toolchain.toml
crates/pulse-core/: Cargo.toml
crates/pulse-core/src/: adapter.rs  error.rs  event.rs  lib.rs  source.rs  tts.rs  wire.rs
crates/pulse-core/tests/: wire_roundtrip.rs
crates/pulse-daemon/: Cargo.toml
crates/pulse-daemon/src/: connection.rs  degraded.rs  error.rs  lib.rs  listener.rs  main.rs  session.rs  shutdown.rs
crates/pulse-daemon/tests/: session_dedup.rs  socket_accept.rs
crates/pulse-hook/: Cargo.toml  README.md
crates/pulse-hook/src/: cli.rs  dispatch.rs  lib.rs  main.rs  payload.rs
crates/pulse-hook/tests/: dispatch_failfast.rs
crates/pulse-source/: Cargo.toml
crates/pulse-source/src/: adapter.rs  error.rs  lib.rs  probe.rs  reader.rs
crates/pulse-source/tests/: read_complete.rs
crates/pulse-source/tests/fixtures/: bursty-appender.jsonl  clean-turn.jsonl  schema-drift.jsonl
docs/: BACKLOG.md  CUTOVER_PLAN.md  PRD.md  PROJECT_PLAN.md  RISK_REGISTER.md  SRS.md  TEST_STRATEGY.md  THREAT_MODEL.md  install-lifecycle.md
docs/adr/: 0001-record-architecture-decisions.md
resources/launchd/: com.pulsevoice.daemon.plist.template
scripts/: install-agent.sh  restart-agent.sh  uninstall-agent.sh
scripts/lib/: paths.sh
