# Workspace virtual manifest.
#
# Declares the Cargo workspace and the workspace-wide dependency versions.
# Member crates land under `crates/`; work-1.01 added `pulse-core`, work-1.02
# adds `pulse-hook`, work-1.03 adds `pulse-daemon`. Work-1.04 adds
# `pulse-source`.
[workspace]
resolver = "2"
members = [
    "crates/pulse-core",
    "crates/pulse-hook",
    "crates/pulse-daemon",
    "crates/pulse-source",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "Apache-2.0"
publish = false

# Pinned once at the workspace level and inherited via `dep.workspace = true`
# so crate manifests never drift. Floors are major-version ranges (per the
# Rust API guidelines / Cargo semver convention): cargo resolves the highest
# compatible version at build time.
[workspace.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util", "sync", "net", "time", "fs"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
bytes = "1"
futures = "0.3"
# `clap` is hook-specific (argv parsing); the daemon and source crates don't
# need it. Declared per-crate in `crates/pulse-hook/Cargo.toml`, NOT here.

# pulse-* internal crates will reference each other via path + workspace = true
# once they exist. For now pulse-core is the dependency root (no workspace-crate
# deps).
