[package]
name = "pulse-source"
description = "PulseVoice Claude Code source adapter: transcript read-safety, schema probe, ClaudeCodeAdapter"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
pulse-core = { path = "../pulse-core" }
tokio = { workspace = true, features = ["io-util", "fs", "time", "rt"] }
tokio-stream = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["io-util", "fs", "time", "rt", "rt-multi-thread", "macros"] }
